--- a/PUBLISH/index.html
+++ b/PUBLISH/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Render Site</title>
+    <title>Mzantsi Vibes Homepage</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
-    <h1>Hello from Render!</h1>
-    <p>This is my first deployed website.</p>
-
-    <h2>About This Project</h2>
     <div id="readme-content">
-        Loading README content...
     </div>
 
     <script>
